frs-banking/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>Immutable ledger entry posted by the core-banking system via inbound webhook (FR-3). External_Txn_Id__c is unique — the replay/dedup guard.</description>
    <label>Transaction</label>
    <pluralLabel>Transactions</pluralLabel>
    <nameField>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
        <displayFormat>TXN-{00000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>