frs-banking/main/default/objects/Transaction__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>