frs-banking/main/default/objects/Transaction__c/fields/External_Txn_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Txn_Id__c</fullName>
    <label>External Txn Id</label>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>Core-banking transaction id. Unique — replaying the same webhook cannot create a duplicate ledger row.</description>
</CustomField>